# rust-starter

./: .gitignore  Cargo.toml
src/: README.md  db.rs  routes.rs
