[package]
name = "inventory-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
